--- a/content/必修一-Prompt Engineering For Developers/7. 文本扩展 Expanding.ipynb
+++ b/content/必修一-Prompt Engineering For Developers/7. 文本扩展 Expanding.ipynb
@@ -42,34 +42,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai\n",
-    "# 导入第三方库\n",
+    "import sys\n",
+    "import os\n",
     "\n",
-    "openai.api_key = \"sk-...\"\n",
-    "# 设置 API_KEY, 请替换成您自己的 API_KEY\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 一个封装 OpenAI 接口的函数，参数为 Prompt，返回对应结果\n",
-    "def get_completion(prompt, model=\"gpt-3.5-turbo\", temperature=0):\n",
-    "    '''\n",
-    "    prompt: 对应的提示\n",
-    "    model: 调用的模型，默认为 gpt-3.5-turbo(ChatGPT)，有内测资格的用户可以选择 gpt-4\n",
-    "    temperature: 温度系数\n",
-    "    '''\n",
-    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
-    "        model=model,\n",
-    "        messages=messages,\n",
-    "        temperature=temperature, # 模型输出的温度系数，控制输出的随机程度\n",
-    "    )\n",
-    "    # 调用 OpenAI 的 ChatCompletion 接口\n",
-    "    return response.choices[0].message[\"content\"]\n"
+    "current_dir = os.getcwd()\n",
+    "target_dir = os.path.abspath(os.path.join(current_dir, '..', '..'))\n",
+    "sys.path.append(target_dir)\n",
+    "\n",
+    "from utils import get_completion\n"
    ]
   },
   {
@@ -90,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,24 +156,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Subject: Thank You for Your Feedback\n",
+      "\n",
       "Dear Valued Customer,\n",
       "\n",
-      "Thank you for taking the time to leave a review about our product. We are sorry to hear that you experienced an increase in price and that the quality of the product did not meet your expectations. We apologize for any inconvenience this may have caused you.\n",
+      "Thank you for taking the time to share your thoughts with us. We sincerely apologize for the concerns you've raised regarding the pricing increase and the quality of the product you received. We strive to maintain high standards and your feedback is crucial in helping us improve.\n",
       "\n",
-      "We would like to assure you that we take all feedback seriously and we will be sure to pass your comments along to our team. If you have any further concerns, please do not hesitate to reach out to our customer service team for assistance.\n",
+      "We understand your disappointment, especially given your experience with the motor noise and warranty issues. If you would like to discuss this further or need assistance, please do not hesitate to reach out to our customer service team at your earliest convenience. \n",
       "\n",
-      "Thank you again for your review and for choosing our product. We hope to have the opportunity to serve you better in the future.\n",
+      "We appreciate your understanding and value your continued support.\n",
       "\n",
-      "Best regards,\n",
-      "\n",
-      "AI customer agent\n"
+      "Best regards,  \n",
+      "AI Customer Agent\n"
      ]
     }
    ],
@@ -289,16 +270,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dear valued customer,\n",
+      "Subject: Thank You for Your Feedback\n",
       "\n",
-      "Thank you for taking the time to share your review with us. We are sorry to hear that you were disappointed with the prices of our products and the quality of our blender. We apologize for any inconvenience this may have caused you.\n",
+      "Dear Valued Customer,\n",
       "\n",
-      "We value your feedback and would like to make things right for you. Please feel free to contact our customer service team so we can assist you with any concerns or issues you may have. We are committed to providing you with the best possible service and products.\n",
+      "Thank you for taking the time to share your experience with us. We sincerely apologize for the issues you've encountered with the pricing changes and the quality of the product. Your feedback regarding the price increases and the concerns about the motor noise after a year is very important to us.\n",
       "\n",
-      "Thank you again for your review and for being a loyal customer. We hope to have the opportunity to serve you better in the future.\n",
+      "We strive to provide high-quality products and exceptional customer service, and we regret that we fell short in your case. If you would like to discuss your concerns further, please don't hesitate to reach out to our customer service team for assistance.\n",
       "\n",
-      "Sincerely,\n",
-      "AI customer agent\n"
+      "Thank you again for your valuable input.\n",
+      "\n",
+      "Best regards,  \n",
+      "AI Customer Agent\n"
      ]
     }
    ],
@@ -401,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.20"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
