--- a/content/必修一-Prompt Engineering For Developers/4. 文本概括 Summarizing.ipynb
+++ b/content/必修一-Prompt Engineering For Developers/4. 文本概括 Summarizing.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1b4bfa7f",
    "metadata": {
     "pycharm": {
@@ -90,32 +90,14 @@
    },
    "outputs": [],
    "source": [
-    "import openai\n",
-    "# 导入第三方库\n",
+    "import sys\n",
+    "import os\n",
     "\n",
-    "openai.api_key = \"sk-...\"\n",
-    "# 设置 API_KEY, 请替换成您自己的 API_KEY\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "9f679f1f",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def get_completion(prompt, model=\"gpt-3.5-turbo\"): \n",
-    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
-    "        model=model,\n",
-    "        messages=messages,\n",
-    "        temperature=0, # 值越低则输出文本随机性越低\n",
-    "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "current_dir = os.getcwd()\n",
+    "target_dir = os.path.abspath(os.path.join(current_dir, '..', '..'))\n",
+    "sys.path.append(target_dir)\n",
+    "\n",
+    "from utils import get_completion\n"
    ]
   },
   {
@@ -159,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4d9c0eeb",
    "metadata": {
     "pycharm": {
@@ -195,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "43b5dd25",
    "metadata": {
     "pycharm": {
@@ -252,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Soft and cute panda plush toy loved by daughter, but a bit small for the price. Arrived early.\n"
+      "The panda plush is soft, cute, and loved by my daughter, but it’s smaller than expected for the price. It arrived a day early.\n"
      ]
     }
    ],
@@ -298,7 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "可爱软熊猫公仔，女儿喜欢，面部表情和善，但价钱有点小贵，快递提前一天到货。\n"
+      "公仔可爱软萌，女儿喜欢，但感觉有点小，快递提前到货。\n"
      ]
     }
    ],
@@ -370,7 +352,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The panda plush toy arrived a day earlier than expected, but the customer felt it was a bit small for the price paid.\n"
+      "The product arrived a day earlier than expected, allowing for early enjoyment before gifting, which positively impacted the overall experience.\n"
      ]
     }
    ],
@@ -406,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "80636c3e",
    "metadata": {
     "pycharm": {
@@ -418,7 +400,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "快递提前到货，熊猫公仔软可爱，但有点小，价钱不太划算。\n"
+      "产品运输很快，比预期提前一天到达，令人满意。\n"
      ]
     }
    ],
@@ -463,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "767f252c",
    "metadata": {
     "pycharm": {
@@ -475,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The panda plush toy is soft, cute, and loved by the recipient, but the price may be too high for its size compared to other options.\n"
+      "The panda plush is loved for its softness and cuteness, but considered small for the price, suggesting potential for larger alternatives at the same cost.\n"
      ]
     }
    ],
@@ -512,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "728d6c57",
    "metadata": {
     "pycharm": {
@@ -524,7 +506,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "可爱软熊猫公仔，面部表情友好，但价钱有点高，尺寸较小。快递提前一天到货。\n"
+      "这个熊猫公仔可爱且柔软，但价格略高，感觉可以用相同金额买到更大的产品。\n"
      ]
     }
    ],
@@ -582,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "2d60dc58",
    "metadata": {
     "pycharm": {
@@ -594,7 +576,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"The product arrived a day earlier than expected.\"\n"
+      "It arrived a day earlier than expected, allowing for early enjoyment before gifting.\n"
      ]
     }
    ],
@@ -630,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "c845ccab",
    "metadata": {
     "pycharm": {
@@ -642,7 +624,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "快递比预期提前了一天到货。\n"
+      "评论中关于运输的信息是：快递比预期提前了一天到货。\n"
      ]
     }
    ],
@@ -687,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "ee7caa78",
    "metadata": {
     "pycharm": {
@@ -771,7 +753,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "review_1 = prod_review\n",
@@ -810,17 +798,11 @@
     "\"\"\"\n",
     "\n",
     "reviews = [review_1, review_2, review_3, review_4]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "9d1aa5ac",
    "metadata": {
     "pycharm": {
@@ -832,13 +814,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 Soft and cute panda plush toy loved by daughter, but a bit small for the price. Arrived early. \n",
+      "0 Cute, soft panda plush toy, loved by my daughter, but a bit small for the price. Arrived early. \n",
       "\n",
-      "1 Affordable lamp with storage, fast shipping, and excellent customer service. Easy to assemble and missing parts were quickly replaced. \n",
+      "1 Nice lamp with storage, quick delivery, great customer service for missing parts, and easy to assemble. \n",
       "\n",
-      "2 Good battery life, small toothbrush head, but effective cleaning. Good deal if bought around $50. \n",
+      "2 这款电动牙刷电池续航长，但刷头过小，性价比高。 \n",
       "\n",
-      "3 The product was on sale for $49 in November, but the price increased to $70-$89 in December. The base doesn't look as good as previous editions, but the reviewer plans to be gentle with it. A special tip for making smoothies is to freeze the fruits and vegetables beforehand. The motor made a funny noise after a year, and the warranty had expired. Overall quality has decreased. \n",
+      "3 Despite discounts, prices rose sharply; quality declined over time, eventually leading to a necessary replacement after warranty expired. \n",
       "\n"
      ]
     }
@@ -860,14 +842,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "eb878522",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 可爱的柔软熊猫玩具，女儿喜欢，但价格偏高且稍小，提前到货。 \n",
+      "\n",
+      "1 灯具漂亮且实用，售后服务快速，关心客户，整体满意。 \n",
+      "\n",
+      "2 电动牙刷续航优秀，但刷头过小；性价比高、替换刷头贵。使用后牙齿洁净如新。 \n",
+      "\n",
+      "3 产品价格波动大，整体质量下降，客服服务不佳，需谨慎使用。 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(len(reviews)):\n",
     "    prompt = f\"\"\"\n",
@@ -916,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.20"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
