--- a/content/必修一-Prompt Engineering For Developers/5. 推断 Inferring.ipynb
+++ b/content/必修一-Prompt Engineering For Developers/5. 推断 Inferring.ipynb
@@ -52,22 +52,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a821d943",
-   "metadata": {
-    "height": 132
-   },
-   "outputs": [],
-   "source": [
-    "import openai\n",
-    "# 导入第三方库\n",
-    "\n",
-    "openai.api_key = \"sk-...\"\n",
-    "# 设置 API_KEY, 请替换成您自己的 API_KEY"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "e82f5577",
    "metadata": {
@@ -75,14 +59,14 @@
    },
    "outputs": [],
    "source": [
-    "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
-    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
-    "        model=model,\n",
-    "        messages=messages,\n",
-    "        temperature=0, # this is the degree of randomness of the model's output\n",
-    "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "current_dir = os.getcwd()\n",
+    "target_dir = os.path.abspath(os.path.join(current_dir, '..', '..'))\n",
+    "sys.path.append(target_dir)\n",
+    "\n",
+    "from utils import get_completion\n"
    ]
   },
   {
@@ -162,7 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sentiment of the product review is positive.\n"
+      "The sentiment of the product review is very positive. The reviewer expresses satisfaction with the lamp, emphasizing its functionality, affordability, and the prompt customer service they received regarding the issues they encountered. Phrases like \"happily sent over a new one,\" \"very quickly got me the missing piece,\" and \"great company that cares about their customers and products\" highlight an overall positive experience with both the product and the company's support.\n"
      ]
     }
    ],
@@ -187,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "情感是积极的/正面的。\n"
+      "这条评论的情感总体上是积极的。评论者对产品的外观和功能表示满意，虽然在运输过程中遇到了一些问题，但他们对公司的客服反应迅速和解决问题的态度感到满意，因此对公司给予了正面的评价。整体来看，评论传达了一种对产品和服务的肯定和赞赏。\n"
      ]
     }
    ],
@@ -294,7 +278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "satisfied, grateful, impressed, content, pleased\n"
+      "satisfaction, gratitude, appreciation, relief, trust\n"
      ]
     }
    ],
@@ -321,7 +305,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "满意,感激,信任,赞扬,愉快\n"
+      "积极, 满意, 赞赏, 感激, 积极评价\n"
      ]
     }
    ],
@@ -453,10 +437,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "  \"Item\": \"lamp with additional storage\",\n",
-      "  \"Brand\": \"Lumina\"\n",
-      "}\n"
+      "```json\n",
+      "{\"Item\":\"lamp\",\"Brand\":\"Lumina\"}\n",
+      "```\n"
      ]
     }
    ],
@@ -489,10 +472,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "```json\n",
       "{\n",
       "  \"物品\": \"卧室灯\",\n",
       "  \"品牌\": \"Lumina\"\n",
-      "}\n"
+      "}\n",
+      "```\n"
      ]
     }
    ],
@@ -549,12 +534,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "```json\n",
       "{\n",
       "  \"Sentiment\": \"positive\",\n",
       "  \"Anger\": false,\n",
-      "  \"Item\": \"lamp with additional storage\",\n",
+      "  \"Item\": \"lamp\",\n",
       "  \"Brand\": \"Lumina\"\n",
-      "}\n"
+      "}\n",
+      "```\n"
      ]
     }
    ],
@@ -641,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "8a74cc3e",
    "metadata": {
     "height": 472
@@ -713,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "5c267cbe",
    "metadata": {
     "height": 217
@@ -723,7 +710,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "government survey, public sector employees, job satisfaction, NASA, Social Security Administration\n"
+      "Satisfaction ratings, NASA, employee comments, management response, government pledge\n"
      ]
     }
    ],
@@ -744,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "f92f90fe",
    "metadata": {
     "height": 30,
@@ -754,14 +741,14 @@
     {
      "data": {
       "text/plain": [
-       "['government survey',\n",
-       " ' public sector employees',\n",
-       " ' job satisfaction',\n",
+       "['Satisfaction ratings',\n",
        " ' NASA',\n",
-       " ' Social Security Administration']"
+       " ' employee comments',\n",
+       " ' management response',\n",
+       " ' government pledge']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,15 +759,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "cab27b65",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "调查结果, NASA, 社会保障管理局, 员工满意度, 政府承诺\n"
+     "ename": "NameError",
+     "evalue": "name 'story_zh' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 9\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# 中文\u001b[39;00m\n\u001b[1;32m      2\u001b[0m prompt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124m确定以下给定文本中讨论的五个主题。\u001b[39m\n\u001b[1;32m      4\u001b[0m \n\u001b[1;32m      5\u001b[0m \u001b[38;5;124m每个主题用1-2个单词概括。\u001b[39m\n\u001b[1;32m      6\u001b[0m \n\u001b[1;32m      7\u001b[0m \u001b[38;5;124m输出时用逗号分割每个主题。\u001b[39m\n\u001b[1;32m      8\u001b[0m \n\u001b[0;32m----> 9\u001b[0m \u001b[38;5;124m给定文本: ```\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstory_zh\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m```\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     11\u001b[0m response \u001b[38;5;241m=\u001b[39m get_completion(prompt)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(response)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'story_zh' is not defined"
      ]
     }
    ],
@@ -817,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "94b8fa65",
    "metadata": {
     "height": 81
@@ -832,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "626c5b8e",
    "metadata": {
     "height": 234
@@ -842,11 +833,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nasa: 1\n",
-      "local government: 0\n",
-      "engineering: 0\n",
-      "employee satisfaction: 1\n",
-      "federal government: 1\n"
+      "Here is the list of answers corresponding to each topic:\n",
+      "\n",
+      "1. nasa - 1\n",
+      "2. local government - 0\n",
+      "3. engineering - 0\n",
+      "4. employee satisfaction - 1\n",
+      "5. federal government - 0\n"
      ]
     }
    ],
@@ -868,17 +861,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "902a7c74",
    "metadata": {
     "height": 79
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ALERT: New NASA story!\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m topic_dict \u001b[38;5;241m=\u001b[39m {i\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m: \u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]: \u001b[38;5;28mint\u001b[39m(i\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m: \u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m1\u001b[39m]) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m response\u001b[38;5;241m.\u001b[39msplit(sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)}\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m topic_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnasa\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mALERT: New NASA story!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[26], line 1\u001b[0m, in \u001b[0;36m<dictcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0m topic_dict \u001b[38;5;241m=\u001b[39m {i\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m: \u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]: \u001b[38;5;28mint\u001b[39m(\u001b[43mi\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m: \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m response\u001b[38;5;241m.\u001b[39msplit(sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)}\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m topic_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnasa\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mALERT: New NASA story!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -988,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.20"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
